2003-08-20 Jens Tkotz  <jens@peino.de> 1.4.1-cvs-b10

	* Language update: italian

2003-08-20 Jens Tkotz  <jens@peino.de> 1.4.1-cvs-b9
	
	* Changed behaviour of initlanguage()
	  We now dont set $gallery->app->ML_mode if we have none,
	  because the would override value from config_data.inc

	* Changed text in slideshow to make it easier for translation
	  Good luck we can use the translation from lowtech
	  so no translation file additions
	  Just a sync

2003-08-20 Jens Tkotz  <jens@peino.de> 1.4.1-cvs-b8 

	* Update: french, spanish

	* Fixed little bug in a script

2003-08-19 Jens Tkotz  <jens@peino.de> 1.4.1-cvs-b7

	* Tweaked initLanguage:
	  Removed en_US as default when no browserlangauge is available
	  Cleaned code to fetch warning in this case

	* Updated Localization report generator.

	* REALLY fix what i tried in b5 (2.)

	* removed debug code from ml_pulldown.inc

	* Tweaked bash script (added -f paramter which means fast, no more affirmation)

2003-08-18  Andrew Lindeman  <joyoflinux@yahoo.com> 1.4.1-cvs-b6

        * Fix bug in URL upload code where, if you had images like 1.gif
          and 11.gif, only the former would be detected.

2003-08-18 Jens Tkotz  <jens@peino.de> 1.4.1-cvs-b5

	* Fixed 2 bugs when Gallery was embedded
	  1.) removed alindemans code which cause gallery not to use nuke language
	  2.) Tweaked nls.php to separate alias for post/phpnuke
	      Added detection for post/phpnuke to make combobox according to it.
	      Languages in postnuke now changes correct

	* French, norwegian, dutch and italian update

2003-08-18  Joan McGalliard <gallery@joanhenge.plus.com> 1.4.1-cvs-b4

	* Warning message reductions throughout.

	* Add html_wrap files to po/filelist, as they _could_ contain
	  language strings.

2003-08-17  Andrew Lindeman  <joyoflinux@yahoo.com> 1.4.1-cvs-b3

        * Fix bug in Nuke integration where the language was never saved.
          (Thanks Warren).
