@@ -1,3 +1,11 @@
+2003-08-21 Jens Tkotz  <jens@peino.de> 1.4.1-cvs-b11
+	
+	* Changed back to error_reporting(E_ALL & ~E_NOTICE); 
+	  (Left in b10)
+
+	* Set ML_mode to 2 if we got none from config
+	
+
 2003-08-20 Jens Tkotz  <jens@peino.de> 1.4.1-cvs-b10
 
 	* Language update: italian
